compiler/testData/diagnostics/tests/redeclarations/ConflictingExtensionProperties.kt
package foo

val Int.<!REDECLARATION!>foo<!>: Int get() = 2
val Int.<!REDECLARATION!>foo<!>: Int get() = 3
